--- a/.gitignore
+++ b/.gitignore
@@ -2,13 +2,13 @@
 #
 # Get latest from https://github.com/github/gitignore/blob/master/Unity.gitignore
 #
-/[Ll]ibrary/
-/[Tt]emp/
-/[Oo]bj/
-/[Bb]uild/
-/[Bb]uilds/
-/[Ll]ogs/
-/[Uu]ser[Ss]ettings/
+/RuimteSpel/[Ll]ibrary/
+/RuimteSpel/[Tt]emp/
+/RuimteSpel/[Oo]bj/
+/RuimteSpel/[Bb]uild/
+/RuimteSpel/[Bb]uilds/
+/RuimteSpel/[Ll]ogs/
+/RuimteSpel/[Uu]ser[Ss]ettings/
 
 # MemoryCaptures can get excessive in size.
 # They also could contain extremely sensitive data
